Fixed css around enumerations.tsx. Working on Fixing overflow and refactoring for itegration with backend

--- a/software/tracksight/frontend/src/app/globals.css
+++ b/software/tracksight/frontend/src/app/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 @custom-variant dark (&:where(.dark, .dark *));
 
 @layer base {
@@ -71,11 +71,11 @@
 	/* Dark background */
 }
 
-* {
+/* * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-}
+} */
 
 html,
 body {
